infra/k8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
  namespace: infra
spec:
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: LoadBalancer
