infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
    - host: linkding.nenad.cloud
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-service-linkding
                port:
                  number: 80
